--- a/CreditCardFraudDetection/BankFraudulentTransactions.html
+++ b/CreditCardFraudDetection/BankFraudulentTransactions.html
@@ -170,6 +170,10 @@ plotly.offline.plot([trace], include_plotlyjs=False, output_type='div')</code></
 
 </div>
 
+<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <div id="2ae6350d-9275-472c-8c3c-4c0110f85d9f" style="height: 100%; width: 100%;" class="plotly-graph-div"></div>
+	<script type="text/javascript">window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL="https://plot.ly";Plotly.newPlot("2ae6350d-9275-472c-8c3c-4c0110f85d9f", [{"type": "pie", "values": [4500, 2500, 1053, 500], "labels": ["Oxygen", "Hydrogen", "Carbon_Dioxide", "Nitrogen"]}], {}, {"linkText": "Export to plot.ly", "showLink": true})</script>
+
 <script>
 
 // add bootstrap table styles to pandoc tables
